tests/idris2/error/error011/ConstructorDuplicate.idr
data A = B | B

data C : Type -> Type where
  D : C Int
  D : C String
